2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* math/math.scn, mathf/mathf.scn: Regenerate.
	* Makefile.am, configure.ac: Add mathf/.
	* math/init.c, math/Makefile.am: Reflect having split-out mathf.
	* math/domathf.c, math/domathl.c: Remove.
	* mathf/Makefile.am, mathf/domathf.c, mathf/init.c,
	mathf/mathf.scn: New (Split out from math/).

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* math/init.c: 
	Use fprintf(stdout,..) instead of printf.
	Use CONFIGURE_APPLICATION_DISABLE_FILESYSTEM.

2011-01-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* math/math.scn: New.

2011-01-14	Ralf Corsépius <ralf.corsepius@rtems.org>

	* math/domath.c, math/domathf.c, math/domath.in,
	math/domathl.c, math/init.c, math/Makefile.am:
	New (Import from rtems-4.11).
	* Makefile.am: Add math/
	* configure.ac: Add math/Makefile.

2010-09-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* POSIX/Makefile.am: Add htonl.
	* POSIX/htonl.c: New.

2010-05-17	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1433/cpukit
	* block08/bdbuf_tests.c: Enabled tests 1.1, 1.2 and 1.3.
	* block08/bdbuf_test1_1.c, block08/bdbuf_test1_2.c,
	block08/bdbuf_test1_3.c: Use RTEMS_IO_ERROR instead of
	RTEMS_NO_MEMORY.

2010-05-03	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* block01/init.c, block02/init.c, block03/init.c, block04/init.c,
	block05/init.c, block06/init.c, block07/init.c, block09/init.c,
	block10/init.c: Changed CONFIGURE_MAXIMUM_SEMAPHORES defines.

2010-05-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move POSIX in front of other tests.

2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* bspcmdline01/init.c: Fix assert conditional.

2010-04-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* POSIX/flockfile.c, POSIX/funlockfile.c, POSIX/ftrylockfile.c: New.
	* POSIX/Makefile.am: Add flockfile, funlockfile, ftrylockfile.
